--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <img src="https://www.lolzera.com.br/uploads/2014/04/heimerdinger-classico-large.jpg" alt="">
         <article>
             <p>
-                Um passo mais próximo do maior entendimento.
+                "Um passo mais próximo do maior entendimento."
+                "Eu apliquei a fórmula para o sucesso." (Heimerdinger)
             </p>
         </article>
         <aside>
