--- a/index.html
+++ b/index.html
@@ -51,10 +51,36 @@
         <section>
             <h2>Contato</h2>
             <p>Tem um projeto em mente? Entre em contato</p>
-            <address>
-                Email: <a href="mailto:alexbilolva@gmail.com">alexbilolva@gmail.com</a> <br>
-                Telefone: <a href="tel:+5547992815555">47992815555</a> <br>
-            </address>
+            <form action="">
+                <label for="nome">Nome: </label>
+                <input type="text" id="nome" name="nome" required> <br>
+
+                <label for="email">Email: </label>
+                <input type="email" id="email" name="email" required> <br>
+
+                <label for="telefone">Telefone: </label> <br>
+                <input type="tel" id="telefone" name="telefone"> <br>
+
+                <label for="assunto">Assunto: </label>
+                <select name="assunto" id="assunto">
+                    <Option value="orçamento">Orçameto</Option>
+                    <option value="duvida">Dúvida</option>
+                    <option value="Outro">Outro</option>
+                </select>
+
+                <br>
+
+                <label for="mensagem">Mensagem: </label>
+                <textarea name="mensagem" id="mensagem" cols="5" rowns="5" required></textarea> <br>
+
+                <input type="checkbox" id="inscricao" name="inscricao">
+                <label for="inscricao">Deseja receber notificações via email? Aproveite!</label>
+
+                <br>
+
+                <input type="submit" value="enviar mensagem">
+
+            </form>
         </section>
     </footer>
 </body>
