--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
         </article>
 
     </section>
+
+<section id="Habilidades">
+    <h2>Habilidades e tecnologias</h2>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Tecnologia</th>
+                <th>Nível</th>
+                <th>Descrição</th>
+            </tr>
+        </thead>
+    </table>
+</section>
+
     <footer>
         <p>Direitos reservados ao Bil</p>
         <section>
@@ -79,6 +94,8 @@
                 <br>
 
                 <input type="submit" value="enviar mensagem">
+
+                <input type="date">
 
             </form>
         </section>
