--- a/index.html
+++ b/index.html
@@ -47,19 +47,37 @@
 
     </section>
 
-<section id="Habilidades">
-    <h2>Habilidades e tecnologias</h2>
+    <section id="Habilidades">
+        <h2>Habilidades e tecnologias</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Tecnologia</th>
+                    <th>Nível</th>
+                    <th>Descrição</th>
+                </tr>
+            </thead>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Tecnologia</th>
-                <th>Nível</th>
-                <th>Descrição</th>
-            </tr>
-        </thead>
-    </table>
-</section>
+            <tbody>
+                <tr>
+                    <td>HTML</td>
+                    <TD>Iniciante</TD>
+                    <td>Capaz de construir estruturas de página web semânticas e responsívas.</td>
+                </tr>
+                <tr>
+                    <td>CSS</td>
+                    <TD>intermediário</TD>
+                    <td>Experiência com flexbox, grid e animações CSS</td>
+                </tr>
+                <tr>
+                    <td>Java Script</td>
+                    <TD>Básico</TD>
+                    <td>Desenvolvimento de scripts do lado do cliente para interações</td>
+                </tr>
+            </tbody>
+
+        </table>
+    </section>
 
     <footer>
         <p>Direitos reservados ao Bil</p>
